<resources>
    <string name="app_name">MobileMarket2</string>
    <string name="already_registered_login_here">Already registered? Login here.</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register_new_account">Register New Account</string>
    <string name="logo">Logo</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="username">Username:</string>
    <string name="fullname">Full Name</string>
    <string name="phonenumber">Phone Number:</string>
</resources>
