<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:background="#fff">

        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:background="@layout/header_gradient"
                      android:paddingTop="5dip"
                      android:paddingBottom="5dip">
            <!-- Logo Start-->
            <ImageView android:src="@drawable/mobilemarket"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="10dip"
                       tools:ignore="ContentDescription,RtlHardcoded"/>
            <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->
        <!-- Footer Start -->
        <LinearLayout android:id="@+id/footer"
                      android:layout_width="fill_parent"
                      android:layout_height="90dip"
                      android:background="@layout/footer_repeat"
                      android:layout_alignParentBottom="true" android:orientation="horizontal">
        </LinearLayout>
        <!-- Footer Ends -->

        <!-- Registration Form -->
        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:layout_below="@id/header">
            <!-- Full Name Label -->
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#372c24"
                      android:text="@string/full_name"/>
            <EditText android:id="@+id/name"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dip"
                      android:layout_marginBottom="20dip"
                      android:hint="Full Name" android:maxLines="1"/>
            <!--  Email Label -->
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#372c24"
                      android:text="@string/email"/>
            <EditText android:id="@+id/email"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dip"
                      android:hint="Email"
                      android:layout_marginBottom="20dip"
                      android:inputType="textEmailAddress" android:maxLines="1"/>
            <!-- Password Label -->
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#372c24"
                      android:text="@string/password"/>
            <EditText android:id="@+id/password"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:hint="Password"
                      android:password="true"
                      android:layout_marginTop="5dip" android:maxLines="1"/>
            <!-- Phone Number Label -->
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#372c24"
                      android:text="@string/phone_number"/>
            <EditText android:id="@+id/PhoneNumber"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:inputType="phone"
                      android:hint="Phone Number"
                      android:password="true"
                      android:layout_marginTop="5dip" android:maxLines="1"/>
            <!-- Register Button -->
            <Button android:id="@+id/btnRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/register_new_account"/>
            <!-- Link to Login Screen -->
            <Button   android:id="@+id/btnLinkToLoginScreen"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="40dip"
                      android:layout_marginBottom="40dip"
                      android:text="@string/already_registered_login_here"
                      android:gravity="center"
                      android:textSize="20sp"
                      android:textColor="#025f7c"/>

        </LinearLayout>
        <!-- Registration Form Ends -->
    </RelativeLayout>
</ScrollView>